--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   border-radius: 30% 70% 70% 30% / 30% 30% 90% 70%;
 }
 
-.data-item div img {
+img {
   width: 400px;
   height: 400px;
   border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
